syntax = "proto3";

option csharp_namespace = "MQTTLAB.gRPC.Controller";

package Sensor;

// The greeting service definition.
service  SensorGrpc {
  // Sends a greeting
  rpc Register (SensorRegisterRequest) returns (BaseResponse);
  rpc UpdateStatus(SensorStatusUpdateRequest) returns (BaseResponse);
}

// The request message containing the user's name.
message SensorRegisterRequest {
  string id = 1;
  int64 type = 2;
  int64 status = 3;
  int64 createdAt = 4;
  string topic = 5;
}

message SensorStatusUpdateRequest {
  string id = 1;
  int64 status = 2;
}

// The response message containing the greetings.
message BaseResponse {
  string message = 1;
}
